[package]
name = "quicssh-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["oowl <ouyangjun1999@gmail.com>"]
description = "A simple ssh server based on quic protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
quinn = { version = "0.11", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.2"
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1.7"
rustls-pemfile = "2.1.3"
rcgen = "0.13.2"
log = { version = "0.4.27", features = ["std", "serde"] }
log4rs = "1.2.0"
serde = "1.0.219"
toml = "0.8.19"
hmac = "0.12.1"
sha2 = "0.10.8"
subtle = "2.5"

[patch.crates-io]
quinn = { path = "vendor/quinn/quinn" }
quinn-proto = { path = "vendor/quinn/quinn-proto" }
quinn-udp = { path = "vendor/quinn/quinn-udp" }

[package.metadata.deb]
extended-description = """\
:) quicssh-rs is a QUIC proxy that allows to use QUIC to connect to an SSH server without needing to patch the client or the server."""
section = "net"
priority = "optional"
suggests = "openssh-server"
assets = [
    ["target/release/quicssh-rs", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/quicssh-rs/README", "644"],
    ["LICENSE", "/usr/share/doc/quicssh-rs/LICENSE", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "quicssh-rs"
enable = false
start = false
restart-after-upgrade = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/quicssh-rs", dest = "/usr/bin/quicssh-rs", mode = "755" },
    { source = "quicssh-rs.service", dest = "/usr/lib/systemd/system/quicssh-rs.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/quicssh-rs/README", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/quicssh-rs/LICENSE", mode = "644", doc = true },
]
post_install_script = """
systemctl daemon-reload >/dev/null 2>&1 || :
"""
pre_uninstall_script = """
if [ $1 -eq 0 ]; then
    systemctl --no-reload disable --now quicssh-rs.service >/dev/null 2>&1 || :
fi
"""
post_uninstall_script = """
systemctl daemon-reload >/dev/null 2>&1 || :
if [ $1 -ge 1 ]; then
    systemctl try-restart quicssh-rs.service >/dev/null 2>&1 || :
fi
"""

[package.metadata.generate-rpm.requires]
systemd = "*"
